--- a/src/app/components/pages/login-page/loginPage.css
+++ b/src/app/components/pages/login-page/loginPage.css
@@ -1,8 +1,20 @@
-.block{
-    background-image: url('http://ati.eastus.cloudapp.azure.com:5000/Content/Images/Banners/Login-3.jpg');
+.Section{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.23), rgba(0, 0, 0, 0.23)), url('http://ati.eastus.cloudapp.azure.com:5000/Content/Images/Banners/Login-3.jpg');
     width: 100vw;
     background-size: cover;
     height: calc(100vh - 200px);
     background-position: center;
+    padding: 30px;
     background-repeat: no-repeat;
+}
+.login-container{
+    padding: 40px;
+    background-color: #13121240 !important;
+    opacity: 0.8 !important;
+}
+.fa-icon{
+    top: 10px;
+    position: absolute;
+    right: 11px;
+    color: #777;  
 }
