--- a/src/app/components/pages/my-profile/profile.css
+++ b/src/app/components/pages/my-profile/profile.css
@@ -1,17 +1,32 @@
 .content-wraper{
     padding: 20px;
 }
-.heading h3{
-    margin: -15px;
-    font-size: 24px;
-    color: #929292;
-    padding: 15px;
-    font-weight: normal;
-    margin-bottom: 20px;
-    background-color: #fafbfc;
-    border-bottom: 1px solid #cfdbe2
-}
 .panel{
     border-top-width: 3px;
     border: 1px solid #cfdbe2;
+}
+.text-profile{
+    font-size: 24px;
+    color: #929292;
+}
+.btn-back {
+    color: #333;
+    background-color: #fff;
+    border: 1px solid #eaeaea;
+    font-size: 13px;
+    padding: 7px 18px;
+    border-radius: 15px;
+}.bg-gray{
+    background-color: #fafbfc
+}
+.btn-change-pass{
+    background-color: #f05050;
+    color: #fff;
+    border-color: transparent;
+    font-size: 13px;
+    border-radius: 3px;
+}
+.btn-change-pass:hover{
+    background-color: #f05050;
+    border-color: transparent;
 }
