--- a/src/app/components/pages/employee/employeeList.css
+++ b/src/app/components/pages/employee/employeeList.css
@@ -26,3 +26,37 @@
 .p-column-header-content{
     white-space: nowrap;
 }
+.p-datatable .p-datatable-header {
+    background: none;
+    border: none;
+}
+.p-datatable .p-datatable-tbody > tr > td {
+    padding: 8px 10px;
+    font-size: 13px;
+    vertical-align: top !important;
+    word-break: break-all
+}
+.p-datatable .p-datatable-tbody > tr > th {
+    padding: 8px 18px; 
+    font-size: 14px;
+}
+.btn-view{
+    padding: 4px 5px;
+    border-radius: 3px;
+    font-size: 14px;
+    color:white;
+}
+.width_desc_name{
+    min-width: 220px;
+}
+.width_desc{
+    min-width: 315px;
+}
+.p-datatable .p-datatable-thead > tr > th {
+    color: #888;
+    font-weight: 600;
+    font-size: 14px;
+}
+.p-datatable .p-sortable-column .p-sortable-column-icon {
+    color: #888;
+}
