--- a/src/app/components/pages/add-Employee/addEmployee.css
+++ b/src/app/components/pages/add-Employee/addEmployee.css
@@ -34,3 +34,12 @@
 .color-red{
     color: red;
 }
+.width_action{
+    min-width: 100px;
+}
+.btn-edit-delete{
+    padding: 6px 16px;
+    font-size: 13px;
+    border-radius: 3px;
+    color: #fff;
+}
